--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "helmet": "^4.4.1",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.18",
+    "knex-cleaner": "^1.3.1",
     "pg": "^8.5.1"
   },
   "devDependencies": {
