--- a/.gitignore
+++ b/.gitignore
@@ -78,7 +78,6 @@ web_modules/
 
 # Next.js build output
 .next
-out
 
 # Nuxt.js build / generate output
 .nuxt
@@ -109,8 +108,13 @@ dist
 .vscode-test
 
 # yarn v2
+
 .yarn/cache
 .yarn/unplugged
 .yarn/build-state.yml
-.yarn/install-state.gz
 .pnp.*
+
+.vscode
+
+.DS_Store
+*.db3
